Code cleanup for ES tests
Fix some minor warnings, add missing @Test annotation to methods, etc.